          is basically "setup with a twist".

        - monotone no longer passes syntactically correct, but non-existent
          revision ids through the selector machinery.  The most visible
          place for this change is `automate select`, which no longer
          echoes every possible 40 hex-byte string.

        New Features

        - The 'disapprove' command now accepts a revision range in
          addition to a single revision.

        - New 'k:' selector type to query revisions where at least one
          certificate was signed with the given key.

        - New automation command 'log' which behaves identical to the
          normal 'log' command, except that it only outputs the
          revision ids.

        Bugs Fixed

        - the 'mv' command now warns when a source is being renamed onto
          itself or one of its children (fixes monotone bug #29484).

        - the 'mv' command now handles this usage properly, where
          'foo' is a directory:
          mv foo bar
          mtn mv --bookkeep-only foo bar

        - monotone no longer asks to pick a branch from a set of branches
          of a revision in which all but one branch have been suspended
          (fixes monotone bug #29843)

        - The annotate command no longer fails if it should print out
          empty or untrusted date cert values
          (fixes monotone bug #30150)

        - monotone now tries harder to find the cancel hint in a commit
          message and only aborts if it can't find it anywhere
          (fixes monotone bug #30215)

        - The import command no longer warns about not being able
          to write out _MTN/options on --dry-run
          (fixes monotone bug #30225)

        - `automate remote' and `automate remote_stdio' can now be used
          without transport authentication (e.g. on file:// or ssh://
          transports) as well as anonymously over netsync
          (fixes monotone bug #30237)
