@@ -83,6 +83,8 @@ Xxx Xxx 99 99:99:99 UTC 2010
 
         New Features
 
+        - New automate versions of 'pubkey' and 'dropkey'.
+
         - The 'disapprove' command now accepts a revision range in
           addition to a single revision.
 
